handling duplicate conversation

--- a/iMessenger/Views/Base.lproj/Main.storyboard
+++ b/iMessenger/Views/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XM5-7L-OPy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XM5-7L-OPy">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -83,7 +83,7 @@
         <scene sceneID="cTP-5o-bVs">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ELI-AL-yoC" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Chats" id="j1l-vd-v51"/>
+                    <tabBarItem key="tabBarItem" title="Chats" image="message" catalog="system" id="j1l-vd-v51"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="f0g-LM-56C">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
@@ -102,7 +102,7 @@
         <scene sceneID="TWy-Zn-HEv">
             <objects>
                 <navigationController id="oL1-P2-s8y" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Profile" id="b1a-gr-RJR"/>
+                    <tabBarItem key="tabBarItem" title="Profile" image="person.circle" catalog="system" id="b1a-gr-RJR"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="gah-NI-HUE">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -117,6 +117,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="message" catalog="system" width="128" height="113"/>
+        <image name="person.circle" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
